--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^16.4.5",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.18.0",
